# spanns

./: LICENSE  README.md  pyproject.toml
src/spann.egg-info/: PKG-INFO  SOURCES.txt
src/spanns/: __init__.py  spanns.py
src/spanns.egg-info/: PKG-INFO
